--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,7 +34,10 @@ install:
   - pip install git+https://github.com/benureau/leabra.git@master
 
   # pytorch does not distribute packages over pypi. Install it directly.
-  - if not "%PYTORCH%" == "" %PYTHON%\\python.exe -m pip install http://download.pytorch.org/whl/cpu/torch-0.4.1-%PYTORCH%-win_amd64.whl
+  - if not "%PYTORCH%" == "" pip install http://download.pytorch.org/whl/cpu/torch-0.4.1-%PYTORCH%-win_amd64.whl
+
+  # Remove pytorch from requirements if none is available
+  - if "%PYTORCH%" == "" (findstr /V torch < dev_requirements.txt > tmp_req && move /Y tmp_req dev_requirements.txt)
 
   - pip install -e .[dev]
 
