--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,25 +10,20 @@ init:
 - cmd: ''
 
 environment:
+  PATH: '%PYTHON%\Scripts;%PATH%'
   matrix:
   - PYTHON: C:\Python35
-    PATH: C:\Python35\Scripts;%PATH%
     MARK: -m llvm
   - PYTHON: C:\Python36
-    PATH: C:\Python36\Scripts;%PATH%
     MARK: -m llvm
   - PYTHON: C:\Python37
-    PATH: C:\Python37\Scripts;%PATH%
     MARK: -m llvm
   - PYTHON: C:\Python35-x64
     PYTORCH: cp35-cp35m
-    PATH: C:\Python35-x64\Scripts;%PATH%
   - PYTHON: C:\Python36-x64
     PYTORCH: cp36-cp36m
-    PATH: C:\Python36-x64\Scripts;%PATH%
   - PYTHON: C:\Python37-x64
     PYTORCH: cp37-cp37m
-    PATH: C:\Python37-x64\Scripts;%PATH%
 
 install:
   - choco upgrade graphviz.portable -y
