--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -49,4 +49,8 @@ cache:
 build: off
 
 test_script:
-- cmd: pytest tests/ %EXTRA_ARGS%
+  - pytest --junit-xml=tests_out.xml tests/ %EXTRA_ARGS%
+
+after_test:
+  # Upload tests to appveyor overview
+  - curl -X POST -F "file=@tests_out.xml" https://ci.appveyor.com/api/testresults/junit/%APPVEYOR_JOB_ID%
