--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -51,6 +51,6 @@ build: off
 test_script:
   - pytest --junit-xml=tests_out.xml tests/ %EXTRA_ARGS%
 
-after_test:
+on_finish:
   # Upload tests to appveyor overview
   - curl -X POST -F "file=@tests_out.xml" https://ci.appveyor.com/api/testresults/junit/%APPVEYOR_JOB_ID%
