appveyor: Preserve only pip cache, not installed packages
Install the latest version of each dependency.

Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -42,7 +42,7 @@ install:
   - pip install --user -e .[dev]
 
 cache:
-    - '%APPDATA%\Python\%PYTHON% -> .appveyor.yml'
+    - '%LOCALAPPDATA%\pip\Cache -> .appveyor.yml'
     - 'C:\ProgramData\chocolatey\lib -> .appveyor.yml'
     - 'C:\ProgramData\chocolatey\bin -> .appveyor.yml'
 
