--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,8 +29,11 @@ environment:
 install:
   - choco upgrade graphviz.portable -y
   - pip --version
-  - pip install --user -U certifi pip
+  - pip install --user -U pip
   - pip --version
+  # certifi upgrade is needed by pytest-profiling (it does not set the dependencies right)
+  # numpy 1.16 gets pulled by leabra below and pnl downgrades it to <1.16 later
+  - pip install --user -U certifi "numpy<1.16"
   - pip install --user git+https://github.com/benureau/leabra.git@master
 
   # pytorch does not distribute packages over pypi. Install it directly.
