--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,7 +29,8 @@ environment:
 install:
   - choco upgrade graphviz.portable -y
   - pip --version
-  - pip install --user -U certifi
+  # certifi is needed for pytest-profiling and numpy 1.16 gets pulled by leabra below
+  - pip install --user -U certifi "numpy<1.16"
   - pip install --user git+https://github.com/benureau/leabra.git@master
 
   # pytorch does not distribute packages over pypi. Install it directly.
