--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -32,8 +32,7 @@ install:
   - pip --version
   # certifi upgrade is needed by pytest-profiling (it does not set the dependencies right)
   # numpy 1.16 gets pulled by leabra below and pnl downgrades it to <1.16 later
-  # llvmlite==0.27 segfaults in windows when using 64bit python
-  - pip install --user -U certifi "numpy<1.16" "llvmlite<0.27"
+  - pip install --user -U certifi "numpy<1.16"
   - pip install --user git+https://github.com/benureau/leabra.git@master
 
   # pytorch does not distribute packages over pypi. Install it directly.
