--- a/.gitignore
+++ b/.gitignore
@@ -204,6 +204,9 @@ ENV/
 # merge files
 *.orig
 
+#temp files
+*.swp
+
 # End of https://www.gitignore.io/api/osx,python,pycharm
 
 Scripts/Scratch\ Pad.py
