--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ before_install: |
 
 
 script:
-  - python -m pytest -p no:logging $PYTEST_COV tests/
+  - python -m pytest -n auto -p no:logging $PYTEST_COV tests/
 
 after_script:
   - if [ "x$COVERALLS_REPO_TOKEN" != "x" ]; then coveralls; fi
