--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ branches:
 install:
   - if [ "x$COVERALLS_REPO_TOKEN" != "x" ]; then pip install coveralls; fi
   - pip install git+https://github.com/benureau/leabra.git@master
+  # Upgrade pytest explicitly, Travis bundles an old version
+  - pip install -U pytest
   - pip install -e .[dev]
 
 os: linux
