.travis: Disable deprecation warnings on macos/py36 as well.
Reduces number of warnings from ~1500 to 51
Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ matrix:
     language: minimal
     env:
         - PYTHON=3.6.8
+        - PYTHONWARNINGS="ignore::DeprecationWarning"
     # Cache installed python virtual env and homebrew downloads
     cache:
         directories:
