--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ install:
   - pip install git+https://github.com/benureau/leabra.git@master
   # Travis bundles pytest 4.3.1 in Linux Xenial, new pytest-xdist
   # requires pytest>=4.4.0, and the dependencies are broken
-  # Pytest>=5 crashes several tests
-  - pip install -U 'pytest<5'
+  - pip install -U pytest
   - pip install -e .[dev]
 
 os: linux
