travis: Consider all files for testing
The sources are checked by pytest-pydocstyle
Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/.travis.yml
+++ b/.travis.yml
@@ -84,7 +84,7 @@ before_install: |
 
 
 script:
-  - python -m pytest -n auto --strict-markers -p no:logging $PYTEST_COV tests/
+  - python -m pytest -n auto --strict-markers -p no:logging $PYTEST_COV
 
 after_script:
   - if [ "x$COVERALLS_REPO_TOKEN" != "x" ]; then coveralls; fi
