--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,8 @@ matrix:
     # Cache installed python virtual env and homebrew downloads
     cache:
         directories:
-          - $HOME/Library/Caches
+          - $HOME/Library/Caches/Homebrew
+          - $HOME/Library/Caches/pip
 
   - os: osx
     python: 3.7
@@ -55,7 +56,8 @@ matrix:
     # Cache installed python virtual env and homebrew downloads
     cache:
         directories:
-          - $HOME/Library/Caches
+          - $HOME/Library/Caches/Homebrew
+          - $HOME/Library/Caches/pip
 
 before_install: |
   if [ "$TRAVIS_OS_NAME" == "osx" ]; then
