--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -24,7 +24,7 @@ jobs:
       # The entire matrix is set up and 'base' builds are pruned based
       # on event name and final configuration (ubuntu, python3.7).
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         python-architecture: ['x64']
         os: [ubuntu-latest, macos-latest, windows-latest]
         event:
