ci: Don't build "base" version of docs using python 3.10 or 3.11
Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -37,9 +37,13 @@ jobs:
             pnl-version: 'base'
           - os: windows-latest
             pnl-version: 'base'
-          - python-version: 3.8
+          - python-version: '3.8'
             pnl-version: 'base'
-          - python-version: 3.9
+          - python-version: '3.9'
+            pnl-version: 'base'
+          - python-version: '3.10'
+            pnl-version: 'base'
+          - python-version: '3.11'
             pnl-version: 'base'
 
     outputs:
