ci: Don't use latest python on macos for building docs
Version 3.7.17 is built without the necessary support for bz2:
	https://github.com/actions/setup-python/issues/682
Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -78,7 +78,9 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        # Block python3.7.17 on macos. see:
+        # https://github.com/actions/setup-python/issues/682
+        python-version: ${{ (matrix.os == 'macos-latest' && matrix.python-version == '3.7') && '3.7.16' || matrix.python-version }}
         architecture: ${{ matrix.python-architecture }}
 
     - name: Get pip cache location
