--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       # Matrix setup is a hacky way to include 'base' build in pull requests
       # The entire matrix is set up and 'base' builds are pruned based
-      # on event name and final configuration (ubuntu, python3.7).
+      # on event name and final configuration (ubuntu, python3.11).
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         python-architecture: ['x64']
@@ -37,20 +37,20 @@ jobs:
             pnl-version: 'base'
           - os: windows-latest
             pnl-version: 'base'
+          - python-version: '3.7'
+            pnl-version: 'base'
           - python-version: '3.8'
             pnl-version: 'base'
           - python-version: '3.9'
             pnl-version: 'base'
           - python-version: '3.10'
             pnl-version: 'base'
-          - python-version: '3.11'
-            pnl-version: 'base'
 
     outputs:
       on_master: ${{ steps.on_master.outputs.on-branch }}
 
     steps:
-    # increased fetch-depth and tag checkout needed as in pnl-ci.yml
+    # Increased fetch-depth and tag checkout needed compared to pnl-ci.yml
     - name: Checkout sources
       uses: actions/checkout@v3
       if: ${{ matrix.pnl-version == 'head' }}
@@ -146,7 +146,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7]
+        python-version: [3.11]
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
