--- a/.github/workflows/pnl-ci.yml
+++ b/.github/workflows/pnl-ci.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.11']
+        python-version: ['3.7', '3.11', '3.12']
         python-architecture: ['x64']
         extra-args: ['']
         os: [ubuntu, macos, windows]
