--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ grpcio<1.60.0
 leabra-psyneulink<0.3.3
 llvmlite<0.42
 matplotlib<3.7.3
-modeci_mdf<0.5, >=0.4.3; (platform_machine == 'AMD64' or platform_machine == 'x86_64') and platform_python_implementation == 'CPython' and implementation_name == 'cpython'
+modeci_mdf<0.5, >=0.4.3; (platform_machine == 'AMD64' or platform_machine == 'x86_64' or platform_machine == 'arm64' or platform_machine == 'aarch64') and platform_python_implementation == 'CPython' and implementation_name == 'cpython'
 networkx<3.3
 numpy>=1.21.0, <1.24.5
 optuna<3.4.0
@@ -19,4 +19,4 @@ pint<0.22.0
 protobuf<3.20.4
 rich>=10.1, <10.13
 toposort<1.11
-torch>=1.10.0, <2.1.0; (platform_machine == 'AMD64' or platform_machine == 'x86_64') and platform_python_implementation == 'CPython' and implementation_name == 'cpython'
+torch>=1.10.0, <2.2.0; (platform_machine == 'AMD64' or platform_machine == 'x86_64' or platform_machine == 'arm64' or platform_machine == 'aarch64') and platform_python_implementation == 'CPython' and implementation_name == 'cpython'
