• test_autodiffcomposition.py, test_emcomposition.py  - add tests for execution without torch installed

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ addopts =
 
 markers =
 	stress: Long running tests, skipped by defaults
-	acconstructor
+	autodiff_constructor
 	acmisc
 	accorrectness
 	actime
