setup: Error on SyntaxWarnings
Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ required_plugins = pytest-benchmark pytest-cov pytest-helpers-namespace pytest-p
 xfail_strict = True
 
 filterwarnings =
+	error::SyntaxWarning
 	error:Creating an ndarray from ragged nested sequences \(which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes\) is deprecated.*:numpy.VisibleDeprecationWarning
 	error:Invalid escape sequence
 
