ci/ga: Do not upload distfile for version restricted run
The package is identical to the vanilla run but for the fixed minimum
versions of requirements.

Fixes: 76eeef504e5f758dabc79e09be61cb24149a3754
	("ci/ga: Add a CI run with version restricted dependencies")

Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/.github/workflows/pnl-ci.yml
+++ b/.github/workflows/pnl-ci.yml
@@ -203,6 +203,7 @@ jobs:
 
     - name: Upload dist packages
       uses: actions/upload-artifact@v3
+      if: matrix.version-restrict == ''
       with:
         name: dist-${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.python-architecture }}
         path: dist/
