ci/ga: Use native python architecture for macos python 3.8 job
x64 python is broken on arm64 images [0]
[0] https://github.com/actions/setup-python/issues/855

Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/.github/workflows/pnl-ci.yml
+++ b/.github/workflows/pnl-ci.yml
@@ -107,8 +107,8 @@ jobs:
 
           # add python 3.8 build on macos since 3.7 is broken
           # https://github.com/actions/virtual-environments/issues/4230
+          # use default python-architecture
           - python-version: '3.8'
-            python-architecture: 'x64'
             os: macos
 
         exclude:
