--- a/.github/workflows/pnl-ci-docs.yml
+++ b/.github/workflows/pnl-ci-docs.yml
@@ -20,18 +20,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
-      # Matrix setup is a hacky way to include 'base' build in pull requests
-      # The entire matrix is set up and 'base' builds are pruned based
-      # on event name and final configuration (ubuntu, python3.11).
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         os: [ubuntu-latest, macos-latest, windows-latest]
-        event:
-          - ${{ github.event_name }}
-        pnl-version: ['head', 'base']
+        pnl-version: ${{ (github.event_name == 'push') && fromJSON('["head"]') || fromJSON('["head", "base"]') }}
         exclude:
-          - event: 'push'
-            pnl-version: 'base'
           - os: macos-latest
             pnl-version: 'base'
           - os: windows-latest
@@ -57,7 +50,6 @@ jobs:
           - python-version: '3.7'
             os: macos-13
             pnl-version: 'head'
-            event: 'push'
 
     outputs:
       on_master: ${{ steps.on_master.outputs.on-branch }}
