tests/llvm: Add llvm_not_implemented mark.
Combination of llvm and llvm_not_implemented marks is automatically
skipped.

Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ markers =
 	acnested
 	composition: PsyNeuLink Composition tests
 	llvm: Tests using LLVM runtime compiler
+	llvm_not_implemented: Tests that should use LLVM runtime compiler but the functionality is not yet implemented
 	cuda: Tests using LLVM runtime compiler and CUDA GPGPU backend
 	control: Tests including control mechanism and/or control projection
 	state_features: Tests for OptimizationControlMechanism state_features specifications
