setup.cfg: Revert forced serialization of tests
Signed-off-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ license_files = [LICENSE.txt]
 addopts =
     -s
     -vv
-    -n 0
+    -n auto
     --dist worksteal
     --benchmark-disable
     --benchmark-disable-gc
